Handling of datatypes and empty values moved into templates Proper template for geolocations Added template for boolean

--- a/src/main/resources/mustache_templates/oboe/cell/booleanCell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/booleanCell.ttl.mustache
@@ -9,6 +9,6 @@
 :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#cellValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{cellValue}}"^^xsd:integer .
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{cellValue}}"^^xsd:boolean .
 {{/cellValue}}
 
