--- a/src/main/resources/mustache_templates/oboe/cell/dateCell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/dateCell.ttl.mustache
@@ -8,4 +8,7 @@
 {{!Relate the Measurement to the MeasuredValue}}
 :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
 {{!Relate the actual cell-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{date}}"^^{{columnModel.xsdDatatype}} .
+{{#date}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{date}}"^^xsd:date .
+{{/date}}
+
