--- a/src/main/resources/mustache_templates/oboe/cell/dateTimeCell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/dateTimeCell.ttl.mustache
@@ -8,4 +8,9 @@
 {{!Relate the Measurement to the MeasuredValue}}
 :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
 {{!Relate the actual cell-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{date}} - {{time}}"^^{{columnModel.xsdDatatype}} .
+{{#date}}
+{{#time}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{date}}T{{time}}"^^xsd:dateTime .
+{{/time}}
+{{/date}}
+
