--- a/src/main/resources/mustache_templates/oboe/cell/geolocationCell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/geolocationCell.ttl.mustache
@@ -1,48 +1,26 @@
 #Row {{rowModel.rowId}}, Column {{columnModel.columnHeader}}
-#Latitude component
 {{!Construct an oboe-core:Measurement for the latitude}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_latitude rdf:type oboe-core:Measurement .
+:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type oboe-core:Measurement .
 {{!Relate the Measurement to the Observation}}
-:column_{{columnModel.columnHeader}} oboe-core:hasMeasurement :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_latitude .
+:column_{{columnModel.columnHeader}} oboe-core:hasMeasurement :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}  .
 {{!Construct an oboe-core:MeasuredValue for the latitude}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_latitude rdf:type oboe-core:MeasuredValue .
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type oboe-core:MeasuredValue .
 {{!Relate the Measurement to the MeasuredValue}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_latitude oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_latitude .
-{{!Relate the actual latitude-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude oboe-core:hasCode "{{location.latitude}}"^^{{columnModel.xsdDatatype}} .
+:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
+{{!Define the MeasuredValue to be a Point}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type geo:Point .
+{{!Define latitude, longitude and altitude}}
+{{#location.latitude}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} geo:lat "{{location.latitude}}" .
+{{/location.latitude}}
+{{#location.longitude}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} geo:long "{{location.longitude}}" .
+{{/location.longitude}}
+{{#location.altitude}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} geo:alt "{{location.altitude}}" .
+{{/location.altitude}}
+{{!Define accuracy using oboe-core:hasPrecision}}
+{{#location.accuracy}}
+:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasPrecision "{{location.accuracy}}"
+{{/location.accuracy}}
 
-#Longitude component
-{{!Construct an oboe-core:Measurement for the longitude}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude rdf:type oboe-core:Measurement .
-{{!Relate the Measurement to the Observation}}
-:column_{{columnModel.columnHeader}} oboe-core:hasMeasurement :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude .
-{{!Construct an oboe-core:MeasuredValue for the longitude}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude rdf:type oboe-core:MeasuredValue .
-{{!Relate the Measurement to the MeasuredValue}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude .
-{{!Relate the actual longitude-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_longitude oboe-core:hasCode "{{location.longitude}}"^^{{columnModel.xsdDatatype}} .
-
-#Altitude component
-{{!Construct an oboe-core:Measurement for the altitude}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_altitude rdf:type oboe-core:Measurement .
-{{!Relate the Measurement to the Observation}}
-:column_{{columnModel.columnHeader}} oboe-core:hasMeasurement :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_altitude .
-{{!Construct an oboe-core:MeasuredValue for the altitude}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_altitude rdf:type oboe-core:MeasuredValue .
-{{!Relate the Measurement to the MeasuredValue}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_altitude oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_altitude .
-{{!Relate the actual altitude-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_altitude oboe-core:hasCode "{{location.altitude}}"^^{{columnModel.xsdDatatype}} .
-
-#Accuracy component
-{{!Construct an oboe-core:Measurement for the accuracy}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_accuracy rdf:type oboe-core:Measurement .
-{{!Relate the Measurement to the Observation}}
-:column_{{columnModel.columnHeader}} oboe-core:hasMeasurement :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_accuracy .
-{{!Construct an oboe-core:MeasuredValue for the accuracy}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_accuracy rdf:type oboe-core:MeasuredValue .
-{{!Relate the Measurement to the MeasuredValue}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}_accuracy oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_accuracy .
-{{!Relate the actual accuracy-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}}_accuracy oboe-core:hasCode "{{location.accuracy}}"^^{{columnModel.xsdDatatype}} .
