--- a/src/main/resources/mustache_templates/oboe/cell/select1Cell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/select1Cell.ttl.mustache
@@ -8,4 +8,6 @@
 {{!Relate the Measurement to the MeasuredValue}}
 :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
 {{!Relate the actual cell-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{cellValue}}"^^{{columnModel.xsdDatatype}} .
+{{#cellValue}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{cellValue}}"^^xsd:string .
+{{/cellValue}}
