--- a/src/main/resources/mustache_templates/oboe/cell/timeCell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/timeCell.ttl.mustache
@@ -8,4 +8,7 @@
 {{!Relate the Measurement to the MeasuredValue}}
 :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
 {{!Relate the actual cell-value to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{time}}"^^{{columnModel.xsdDatatype}} .
+{{#time}}
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{time}}"^^xsd:time .
+{{/time}}
+
