Introduced separately computable Row-/Col-/Cell-Entity-Identifiers

--- a/src/main/resources/mustache_templates/oboe/cell/geotraceCell.ttl.mustache
+++ b/src/main/resources/mustache_templates/oboe/cell/geotraceCell.ttl.mustache
@@ -1,12 +1,12 @@
 #Row {{rowModel.rowId}}, Column {{columnModel.columnHeader}}
 {{!Construct an oboe-core:Measurement for the latitude}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type oboe-core:Measurement .
+{{cellEntityIdentifier}} rdf:type oboe-core:Measurement .
 {{!Relate the Measurement to the Observation}}
-:column_{{columnModel.columnHeader}} oboe-core:hasMeasurement :measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}}  .
+{{columnModel.columnEntityIdentifier}} oboe-core:hasMeasurement {{cellEntityIdentifier}}  .
 {{!Construct an oboe-core:MeasuredValue for the latitude}}
 :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type oboe-core:MeasuredValue .
 {{!Relate the Measurement to the MeasuredValue}}
-:measurement_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
+{{cellEntityIdentifier}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
 {{!Define the MeasuredValue to point to a collection}}
 :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode (
     {{#locationList}}
