--- a/src/main/resources/rdfExport/mustache_templates/oboe/namespaces.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/namespaces.ttl.mustache
@@ -11,3 +11,4 @@
 @prefix oboe-core: <http://ecoinformatics.org/oboe/oboe.1.2/oboe-core.owl#> .
 @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
 @prefix geo: <http://www.w3.org/2003/01/geo/wgs84_pos#> .
+@prefix om: <http://www.ontology-of-units-of-measure.org/resource/om-2/> .
