Use oboe-core:ObservationCollection in oboe-templates

--- a/src/main/resources/rdfExport/mustache_templates/oboe/column.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/column.ttl.mustache
@@ -1,1 +1,2 @@
 {{columnEntityIdentifier}} rdf:type oboe-core:Observation .
+{{topLevelModel.toplevelEntityIdentifier}} oboe-core:hasMember {{columnEntityIdentifier}} .
