--- a/src/main/resources/rdfExport/mustache_templates/oboe/namespaces.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/namespaces.ttl.mustache
@@ -12,3 +12,5 @@
 @prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
 @prefix geo: <http://www.w3.org/2003/01/geo/wgs84_pos#> .
 @prefix om: <http://www.ontology-of-units-of-measure.org/resource/om-2/> .
+@prefix dcterms: <http://purl.org/dc/terms/> .
+@prefix foaf: <http://xmlns.com/foaf/0.1/> .
