--- a/src/main/resources/rdfExport/mustache_templates/oboe/cell.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/cell.ttl.mustache
@@ -12,34 +12,34 @@
 {{!Creator - optional}}
 {{#semantics.Creator}}
 {{!Given a literal value}}
-{{#semantics.Creator.isLiteral}}
-{{cellEntityIdentifier}} dcterms:creator :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} .
-:creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} rdf:type foaf:Person .
-:creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} foaf:name "{{semantics.Creator.value}}" .
-{{/semantics.Creator.isLiteral}}
-{{!Given an RDF resource}}
-{{^semantics.Creator.isLiteral}}
-{{cellEntityIdentifier}} dcterms:creator {{semantics.Creator.value}} .
-{{/semantics.Creator.isLiteral}}
+    {{#semantics.Creator.isLiteral}}
+        {{cellEntityIdentifier}} dcterms:creator :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} .
+        :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} rdf:type foaf:Person .
+        :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} foaf:name "{{semantics.Creator.value}}" .
+    {{/semantics.Creator.isLiteral}}
+    {{!Given an RDF resource}}
+    {{^semantics.Creator.isLiteral}}
+        {{cellEntityIdentifier}} dcterms:creator <{{semantics.Creator.value}}> .
+    {{/semantics.Creator.isLiteral}}
 {{/semantics.Creator}}
 
 {{!Characteristic - required}}
 {{!Given a literal value}}
 {{#semantics.Characteristic.isLiteral}}
-{{cellEntityIdentifier}} oboe-core:ofCharacteristic "{{semantics.Characteristic.value}}" .
+    {{cellEntityIdentifier}} oboe-core:ofCharacteristic "{{semantics.Characteristic.value}}" .
 {{/semantics.Characteristic.isLiteral}}
 {{!Given an RDF resource}}
 {{^semantics.Characteristic.isLiteral}}
-{{cellEntityIdentifier}} oboe-core:ofCharacteristic {{semantics.Characteristic.value}} .
+    {{cellEntityIdentifier}} oboe-core:ofCharacteristic <{{semantics.Characteristic.value}}> .
 {{/semantics.Characteristic.isLiteral}}
 
 {{!Unit - required}}
 {{!Given a literal value}}
 {{#semantics.Unit.isLiteral}}
-{{cellEntityIdentifier}} om:hasUnit "{{semantics.Unit.value}}" .
+    {{cellEntityIdentifier}} om:hasUnit "{{semantics.Unit.value}}" .
 {{/semantics.Unit.isLiteral}}
 {{!Given an RDF resource}}
 {{^semantics.Unit.isLiteral}}
-{{cellEntityIdentifier}} om:hasUnit {{semantics.Unit.value}} .
+    {{cellEntityIdentifier}} om:hasUnit <{{semantics.Unit.value}}> .
 {{/semantics.Unit.isLiteral}}
 
