--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geoshapeCell.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geoshapeCell.ttl.mustache
@@ -7,7 +7,7 @@
 {{!Define the collection elements to be Points with latitude, longitude, altitude}}
 {{#locationList}}
     :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} rdf:type geo:Point .
-    :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:lat "{{location.latitude}}" .
-    :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:long "{{location.longitude}}" .
-    :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:alt "{{location.altitude}}" .
+    :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:lat "{{{location.latitude}}}" .
+    :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:long "{{{location.longitude}}}" .
+    :shapeElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:alt "{{{location.altitude}}}" .
 {{/locationList}}
