--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/booleanCell.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/booleanCell.ttl.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#cellValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{cellValue}}"^^xsd:boolean .
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{{cellValue}}}"^^xsd:boolean .
 {{/cellValue}}
