--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/dateCell.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/dateCell.ttl.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#date}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{date}}"^^xsd:date .
+:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{{date}}}"^^xsd:date .
 {{/date}}
