--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geotraceCell.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geotraceCell.ttl.mustache
@@ -7,7 +7,7 @@
 {{!Define the collection elements to be Points with latitude, longitude, altitude}}
 {{#locationList}}
 :pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} rdf:type geo:Point .
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:lat "{{location.latitude}}" .
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:long "{{location.longitude}}" .
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:alt "{{location.altitude}}" .
+:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:lat "{{{location.latitude}}}" .
+:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:long "{{{location.longitude}}}" .
+:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:alt "{{{location.altitude}}}" .
 {{/locationList}}
