Removed old unused Namespaces model

--- a/src/main/resources/rdfExport/mustache_templates/oboe/namespaces.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/namespaces.ttl.mustache
@@ -1,9 +1,6 @@
 {{!User defined namespaces}}
-@base <{{base}}> .
-@prefix : <{{base}}> .
-{{#namespaces}}
-    @prefix {{prefix}}: <{{uri}}> .
-{{/namespaces}}
+@base <{{.}}> .
+@prefix : <{{.}}> .
 {{!All namespaces that are used in any oboe templates}}
 @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
 @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
