--- a/src/main/resources/rdfExport/mustache_templates/csv/column.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/csv/column.ttl.mustache
@@ -1,1 +1,1 @@
-{{{columnHeader}}}{{^isLastColumn}},{{/isLastColumn}}
+{{#isFirstColumn}}ID,{{/isFirstColumn}}{{{columnHeader}}}{{^isLastColumn}},{{/isLastColumn}}
