Fixed blanknode syntax

--- a/src/main/resources/rdfExport/mustache_templates/qudt/elementTypeCells/geolocationCell.ttl.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/qudt/elementTypeCells/geolocationCell.ttl.mustache
@@ -13,5 +13,5 @@
         geo:alt "{{{location.altitude}}}" ;
     {{/location.altitude}}
     
-    rdf:type geo:Point .
+    rdf:type geo:Point ;
 ] .
