Identifiers are no longer RDF-resources but just identifiers

--- a/src/main/resources/rdfExport/mustache_templates/oboe/column.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/column.mustache
@@ -1,2 +1,2 @@
-{{columnEntityIdentifier}} rdf:type oboe-core:Observation .
-{{topLevelModel.toplevelEntityIdentifier}} oboe-core:hasMember {{columnEntityIdentifier}} .
+:obs_{{columnEntityIdentifier}} rdf:type oboe-core:Observation .
+:obsCol_{{topLevelModel.toplevelEntityIdentifier}} oboe-core:hasMember :obs_{{columnEntityIdentifier}} .
