--- a/src/main/resources/rdfExport/mustache_templates/oboe/toplevel.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/toplevel.mustache
@@ -1,1 +1,1 @@
-{{toplevelEntityIdentifier}} rdf:type oboe-core:ObservationCollection .
+:obsCol_{{toplevelEntityIdentifier}} rdf:type oboe-core:ObservationCollection .
