--- a/src/main/resources/rdfExport/mustache_templates/oboe/cell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/cell.mustache
@@ -1,45 +1,45 @@
 #Row {{rowModel.rowId}}, Column {{columnModel.columnHeader}}
 {{!Construct an oboe-core:Measurement for the cell}}
-{{cellEntityIdentifier}} rdf:type oboe-core:Measurement .
+:meas_{{cellEntityIdentifier}} rdf:type oboe-core:Measurement .
 {{!Relate the Measurement to the Observation}}
-{{columnModel.columnEntityIdentifier}} oboe-core:hasMeasurement {{cellEntityIdentifier}} .
+:obs_{{columnModel.columnEntityIdentifier}} oboe-core:hasMeasurement :meas_{{cellEntityIdentifier}} .
 {{!Construct an oboe-core:MeasuredValue for the cell}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type oboe-core:MeasuredValue .
+:measuredValue_{{cellEntityIdentifier}} rdf:type oboe-core:MeasuredValue .
 {{!Relate the Measurement to the MeasuredValue}}
-{{cellEntityIdentifier}} oboe-core:hasValue :measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} .
+:meas_{{cellEntityIdentifier}} oboe-core:hasValue :measuredValue_{{cellEntityIdentifier}} .
 
 {{!Use semantic information}}
 {{!Creator - optional}}
 {{#semantics.Creator}}
 {{!Given a literal value}}
     {{#semantics.Creator.isLiteral}}
-        {{cellEntityIdentifier}} dcterms:creator :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} .
-        :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} rdf:type foaf:Person .
-        :creator_{{columnModel.columnHeader}}_{{rowModel.rowId}} foaf:name "{{{semantics.Creator.value}}}" .
+        :meas_{{cellEntityIdentifier}} dcterms:creator :creator_{{cellEntityIdentifier}} .
+        :creator_{{cellEntityIdentifier}} rdf:type foaf:Person .
+        :creator_{{cellEntityIdentifier}} foaf:name "{{{semantics.Creator.value}}}" .
     {{/semantics.Creator.isLiteral}}
     {{!Given an RDF resource}}
     {{^semantics.Creator.isLiteral}}
-        {{cellEntityIdentifier}} dcterms:creator <{{{semantics.Creator.value}}}> .
+        :meas_{{cellEntityIdentifier}} dcterms:creator <{{{semantics.Creator.value}}}> .
     {{/semantics.Creator.isLiteral}}
 {{/semantics.Creator}}
 
 {{!Characteristic - required}}
 {{!Given a literal value}}
 {{#semantics.Characteristic.isLiteral}}
-    {{cellEntityIdentifier}} oboe-core:ofCharacteristic "{{{semantics.Characteristic.value}}}" .
+    :meas_{{cellEntityIdentifier}} oboe-core:ofCharacteristic "{{{semantics.Characteristic.value}}}" .
 {{/semantics.Characteristic.isLiteral}}
 {{!Given an RDF resource}}
 {{^semantics.Characteristic.isLiteral}}
-    {{cellEntityIdentifier}} oboe-core:ofCharacteristic <{{{semantics.Characteristic.value}}}> .
+    :meas_{{cellEntityIdentifier}} oboe-core:ofCharacteristic <{{{semantics.Characteristic.value}}}> .
 {{/semantics.Characteristic.isLiteral}}
 
 {{!Unit - required}}
 {{!Given a literal value}}
 {{#semantics.Unit.isLiteral}}
-    {{cellEntityIdentifier}} om:hasUnit "{{{semantics.Unit.value}}}" .
+    :meas_{{cellEntityIdentifier}} om:hasUnit "{{{semantics.Unit.value}}}" .
 {{/semantics.Unit.isLiteral}}
 {{!Given an RDF resource}}
 {{^semantics.Unit.isLiteral}}
-    {{cellEntityIdentifier}} om:hasUnit <{{{semantics.Unit.value}}}> .
+    :meas_{{cellEntityIdentifier}} om:hasUnit <{{{semantics.Unit.value}}}> .
 {{/semantics.Unit.isLiteral}}
 
