--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/decimalCell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/decimalCell.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#cellValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{{cellValue}}}"^^xsd:decimal .
+:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode "{{{cellValue}}}"^^xsd:decimal .
 {{/cellValue}}
