--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geolocationCell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geolocationCell.mustache
@@ -1,14 +1,14 @@
 {{!Define the MeasuredValue to be a Point}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} rdf:type geo:Point .
+:measuredValue_{{cellEntityIdentifier}} rdf:type geo:Point .
 {{!Define latitude, longitude and altitude}}
 {{#location.latitude}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} geo:lat "{{{location.latitude}}}" .
+:measuredValue_{{cellEntityIdentifier}} geo:lat "{{{location.latitude}}}" .
 {{/location.latitude}}
 {{#location.longitude}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} geo:long "{{{location.longitude}}}" .
+:measuredValue_{{cellEntityIdentifier}} geo:long "{{{location.longitude}}}" .
 {{/location.longitude}}
 {{#location.altitude}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} geo:alt "{{{location.altitude}}}" .
+:measuredValue_{{cellEntityIdentifier}} geo:alt "{{{location.altitude}}}" .
 {{/location.altitude}}
 {{!Define accuracy using oboe-core:hasPrecision}}
 {{#location.accuracy}}
