--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geotraceCell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geotraceCell.mustache
@@ -1,13 +1,13 @@
 {{!Define the MeasuredValue to point to a collection}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode (
+:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode (
     {{#locationList}}
-        :pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}}
+        :pathElement_{{cellEntityIdentifier}}_{{pathElementIndex}}
     {{/locationList}}
 ) .
 {{!Define the collection elements to be Points with latitude, longitude, altitude}}
 {{#locationList}}
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} rdf:type geo:Point .
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:lat "{{{location.latitude}}}" .
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:long "{{{location.longitude}}}" .
-:pathElement{{rowModel.rowId}}_{{columnModel.columnHeader}}_{{pathElementIndex}} geo:alt "{{{location.altitude}}}" .
+:pathElement_{{cellEntityIdentifier}} rdf:type geo:Point .
+:pathElement_{{cellEntityIdentifier}}  geo:lat "{{{location.latitude}}}" .
+:pathElement_{{cellEntityIdentifier}}  geo:long "{{{location.longitude}}}" .
+:pathElement_{{cellEntityIdentifier}}  geo:alt "{{{location.altitude}}}" .
 {{/locationList}}
