--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/multipleChoiceCell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/multipleChoiceCell.mustache
@@ -1,5 +1,5 @@
 {{!Relate the actual cell-values to the MeasuredValue}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode (
+:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode (
     {{#cellValues}}
     "{{{.}}}"^^xsd:string
     {{/cellValues}}
