--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/timeCell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/timeCell.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#time}}
-:measuredValue_{{rowModel.rowId}}_{{columnModel.columnHeader}} oboe-core:hasCode "{{{time}}}"^^xsd:time .
+:measuredValue_{{cellEntityIdentifier}}  oboe-core:hasCode "{{{time}}}"^^xsd:time .
 {{/time}}
