Added comments to oboe templates

--- a/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geolocationCell.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/elementTypeCells/geolocationCell.mustache
@@ -12,5 +12,5 @@
 {{/location.altitude}}
 {{!Define accuracy using oboe-core:hasPrecision}}
 {{#location.accuracy}}
-{{cellEntityIdentifier}} oboe-core:hasPrecision "{{{location.accuracy}}}" .
+:meas_{{cellEntityIdentifier}} oboe-core:hasPrecision "{{{location.accuracy}}}" .
 {{/location.accuracy}}
