--- a/src/main/resources/rdfExport/mustache_templates/oboe/column.mustache
+++ b/src/main/resources/rdfExport/mustache_templates/oboe/column.mustache
@@ -1,2 +1,3 @@
+{{!Each column describes an Observation}}
 :obs_{{columnEntityIdentifier}} rdf:type oboe-core:Observation .
 :obsCol_{{topLevelModel.toplevelEntityIdentifier}} oboe-core:hasMember :obs_{{columnEntityIdentifier}} .
