--- a/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/dateTimeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/dateTimeCell.mustache
@@ -1,6 +1,6 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#date}}
 {{#time}}
-:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode "{{{date}}}T{{{time}}}"^^xsd:dateTime .
+:measuredValue_{{cellIdentifier}} oboe-core:hasCode "{{{date}}}T{{{time}}}"^^xsd:dateTime .
 {{/time}}
 {{/date}}
