--- a/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/multipleChoiceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/multipleChoiceCell.mustache
@@ -1,5 +1,5 @@
 {{!Relate the actual cell-values to the MeasuredValue}}
-:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode (
+:measuredValue_{{cellIdentifier}} oboe-core:hasCode (
     {{#cellValues}}
     "{{{.}}}"^^xsd:string
     {{/cellValues}}
