--- a/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/timeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/timeCell.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#time}}
-:measuredValue_{{cellEntityIdentifier}}  oboe-core:hasCode "{{{time}}}"^^xsd:time .
+:measuredValue_{{cellIdentifier}}  oboe-core:hasCode "{{{time}}}"^^xsd:time .
 {{/time}}
