--- a/src/main/resources/templateExport/mustache_templates/oboe/toplevel.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/toplevel.mustache
@@ -1,2 +1,2 @@
 {{!The survey describes an ObservationCollection}}
-:obsCol_{{toplevelEntityIdentifier}} rdf:type oboe-core:ObservationCollection .
+:obsCol_{{toplevelIdentifier}} rdf:type oboe-core:ObservationCollection .
