--- a/src/main/resources/templateExport/mustache_templates/oboe/column.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/column.mustache
@@ -1,3 +1,3 @@
 {{!Each column describes an Observation}}
-:obs_{{columnEntityIdentifier}} rdf:type oboe-core:Observation .
-:obsCol_{{topLevelModel.toplevelEntityIdentifier}} oboe-core:hasMember :obs_{{columnEntityIdentifier}} .
+:obs_{{columnIdentifier}} rdf:type oboe-core:Observation .
+:obsCol_{{topLevelModel.toplevelIdentifier}} oboe-core:hasMember :obs_{{columnIdentifier}} .
