--- a/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/dateCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/dateCell.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#date}}
-:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode "{{{date}}}"^^xsd:date .
+:measuredValue_{{cellIdentifier}} oboe-core:hasCode "{{{date}}}"^^xsd:date .
 {{/date}}
