--- a/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/singleChoiceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/oboe/elementTypeCells/singleChoiceCell.mustache
@@ -1,4 +1,4 @@
 {{!Relate the actual cell-value to the MeasuredValue}}
 {{#cellValue}}
-:measuredValue_{{cellEntityIdentifier}} oboe-core:hasCode "{{{cellValue}}}"^^xsd:string .
+:measuredValue_{{cellIdentifier}} oboe-core:hasCode "{{{cellValue}}}"^^xsd:string .
 {{/cellValue}}
