--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geotraceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geotraceCell.mustache
@@ -1,7 +1,4 @@
-{{#columnModel.isFirstColumn}}
-<row>
-{{/columnModel.isFirstColumn}}
-<{{columnModel.columnHeader}}>
+<{{columnModel.columnIdentifier}}>
     <enum>
         {{#locationList}}
         <enumValue index="{{pathElementIndex}}">
@@ -14,7 +11,7 @@
         </enumValue>
         {{/locationList}}
     </enum>
-</{{columnModel.columnHeader}}>
+</{{columnModel.columnIdentifier}}>
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
