--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/decimalCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/decimalCell.mustache
@@ -1,7 +1,4 @@
-{{#columnModel.isFirstColumn}}
-<row>
-{{/columnModel.isFirstColumn}}
-<{{columnModel.columnHeader}}>{{cellValue}}</{{columnModel.columnHeader}}>
+<{{columnModel.columnIdentifier}}>{{cellValue}}</{{columnModel.columnIdentifier}}>
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
