--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/timeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/timeCell.mustache
@@ -1,9 +1,6 @@
-{{#columnModel.isFirstColumn}}
-<row>
-{{/columnModel.isFirstColumn}}
-<{{columnModel.columnHeader}}>
+<{{columnModel.columnIdentifier}}>
     <time>{{time}}</time>
-</{{columnModel.columnHeader}}>
+</{{columnModel.columnIdentifier}}>
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
