XML templates should be more intuitive now

--- a/src/main/resources/templateExport/mustache_templates/xml/cell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/cell.mustache
@@ -1,3 +1,2 @@
-{{#columnModel.isFirstColumn}}
-    <row>
-{{/columnModel.isFirstColumn}}
+{{!Opening Tag for the cell}}
+<{{columnModel.columnIdentifier}}>
