--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geotraceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geotraceCell.mustache
@@ -1,17 +1,19 @@
-<{{columnModel.columnIdentifier}}>
-    <enum>
-        {{#locationList}}
-        <enumValue index="{{pathElementIndex}}">
-            <location 
-                latitude="{{location.latitude}}" 
-                longitude="{{location.longitude}}" 
-                altitude="{{location.altitude}}"
-                accuracy="{{location.accuracy}}"
-            />
-        </enumValue>
-        {{/locationList}}
-    </enum>
+{{!Cell content}}
+<enum>
+    {{#locationList}}
+    <enumValue index="{{pathElementIndex}}">
+        <location>
+            <latitude>{{location.latitude}}</latitude>
+            <longitude>{{location.longitude}}</longitude>
+            <altitude>{{location.altitude}}</altitude>
+            <accuracy>{{location.accuracy}}</accuracy>
+        </location>
+    </enumValue>
+    {{/locationList}}
+</enum>
+{{!Closing tag for the cell}}
 </{{columnModel.columnIdentifier}}>
+{{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
