--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateCell.mustache
@@ -1,6 +1,8 @@
-<{{columnModel.columnIdentifier}}>
-    <date>{{date}}</date>
+{{!Cell content}}
+<date>{{date}}</date>
+{{!Closing tag for the cell}}
 </{{columnModel.columnIdentifier}}>
+{{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
