--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateTimeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/dateTimeCell.mustache
@@ -1,7 +1,9 @@
-<{{columnModel.columnIdentifier}}>
-    <date>{{date}}</date>
-    <time>{{time}}</time>
+{{!Cell content}}
+<date>{{date}}</date>
+<time>{{time}}</time>
+{{!Closing tag for the cell}}
 </{{columnModel.columnIdentifier}}>
+{{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
