--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geoshapeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/geoshapeCell.mustache
@@ -1,17 +1,19 @@
-<{{columnModel.columnIdentifier}}>
-    <collection>
-        {{#locationList}}
-        <collectionValue>
-            <location 
-                latitude="{{location.latitude}}" 
-                longitude="{{location.longitude}}" 
-                altitude="{{location.altitude}}"
-                accuracy="{{location.accuracy}}"
-            />
-        </collectionValue>
-        {{/locationList}}
-    </collection>
+{{!Cell content}}
+<collection>
+    {{#locationList}}
+    <collectionValue>
+        <location>
+            <latitude>{{location.latitude}}</latitude>
+            <longitude>{{location.longitude}}</longitude>
+            <altitude>{{location.altitude}}</altitude>
+            <accuracy>{{location.accuracy}}</accuracy>
+        </location>
+    </collectionValue>
+    {{/locationList}}
+</collection>
+{{!Closing tag for the cell}}
 </{{columnModel.columnIdentifier}}>
+{{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
