--- a/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/timeCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/elementTypeCells/timeCell.mustache
@@ -1,6 +1,8 @@
-<{{columnModel.columnIdentifier}}>
-    <time>{{time}}</time>
+{{!Cell content}}
+<time>{{time}}</time>
+{{!Closing tag for the cell}}
 </{{columnModel.columnIdentifier}}>
+{{!Closing row tag if this is the last cell of the row}}
 {{#columnModel.isLastColumn}}
 </row>
 {{/columnModel.isLastColumn}}
