XML template can now include semantic annotations as attributes

--- a/src/main/resources/templateExport/mustache_templates/xml/cell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/xml/cell.mustache
@@ -1,2 +1,12 @@
 {{!Opening Tag for the cell}}
-<{{columnModel.columnIdentifier}}>
+<{{columnModel.columnIdentifier}}
+    {{#semantics.Characteristic}}
+    characteristic="{{semantics.Characteristic.value}}"
+    {{/semantics.Characteristic}}
+    {{#semantics.Unit}}
+        unit="{{semantics.Unit.value}}"
+    {{/semantics.Unit}}
+    {{#semantics.Creator}}
+        creator="{{semantics.Creator.value}}"
+    {{/semantics.Creator}}
+>
