Simplified CSV templates

--- a/src/main/resources/templateExport/mustache_templates/csv/cell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/csv/cell.mustache
@@ -1,1 +1,1 @@
-{{#columnModel.isFirstColumn}}{{rowModel.rowId}},{{/columnModel.isFirstColumn}}
+{{#columnModel.isFirstColumn}}{{rowModel.rowId}}{{/columnModel.isFirstColumn}},
