--- a/src/main/resources/templateExport/mustache_templates/csv/column.mustache
+++ b/src/main/resources/templateExport/mustache_templates/csv/column.mustache
@@ -1,1 +1,1 @@
-{{#isFirstColumn}}ID,{{/isFirstColumn}}{{{columnHeader}}}{{^isLastColumn}},{{/isLastColumn}}
+{{#isFirstColumn}}ID{{/isFirstColumn}},{{{columnHeader}}}
