--- a/src/main/resources/templateExport/mustache_templates/csv/elementTypeCells/multipleChoiceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/csv/elementTypeCells/multipleChoiceCell.mustache
@@ -1,1 +1,1 @@
-{{#cellValues}}{{.}} {{/cellValues}}{{^columnModel.isLastColumn}},{{/columnModel.isLastColumn}}
+{{#cellValues}}{{.}} {{/cellValues}}
