--- a/src/main/resources/templateExport/mustache_templates/csv/elementTypeCells/geolocationCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/csv/elementTypeCells/geolocationCell.mustache
@@ -1,1 +1,1 @@
-{{location.latitude}} {{location.longitude}} {{location.altitude}} {{location.accuracy}}{{^columnModel.isLastColumn}},{{/columnModel.isLastColumn}}
+{{location.latitude}} {{location.longitude}} {{location.altitude}} {{location.accuracy}}
