--- a/src/main/resources/templateExport/mustache_templates/csv/elementTypeCells/geotraceCell.mustache
+++ b/src/main/resources/templateExport/mustache_templates/csv/elementTypeCells/geotraceCell.mustache
@@ -1,1 +1,1 @@
-{{#locationList}}({{location.latitude}} {{location.longitude}} {{location.altitude}} {{location.accuracy}}){{/locationList}}{{^columnModel.isLastColumn}},{{/columnModel.isLastColumn}}
+{{#locationList}}({{location.latitude}} {{location.longitude}} {{location.altitude}} {{location.accuracy}}){{/locationList}}
